--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,speech,location,owner,anchors,equipment,type,text,mounttrait,lookclose,inventory,waypoints
+    traitnames: location,gravity,mounttrait,equipment,owner,spawned,type,anchors,speech,inventory,lookclose,waypoints,text
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -89,7 +89,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,speech,location,owner,anchors,equipment,type,inventory,text,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,anchors,speech,location,lookclose,gravity,mounttrait,text
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -609,7 +609,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,sentinel,type,inventory,mounttrait,waypoints
+    traitnames: equipment,owner,spawned,type,inventory,sentinel,location,lookclose,waypoints,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -741,7 +741,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,sentinel,type,inventory,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,sentinel,location,lookclose,gravity,mounttrait
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -873,7 +873,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,sentinel,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,sentinel,location,lookclose,gravity,mounttrait
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -906,7 +906,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -938,7 +938,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: equipment,owner,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -967,7 +967,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -996,7 +996,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1025,7 +1025,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1054,7 +1054,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1083,7 +1083,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1112,7 +1112,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1141,7 +1141,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1173,7 +1173,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,spawned,lookclose,location,owner,equipment,type,inventory,mounttrait
+    traitnames: owner,equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1202,7 +1202,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1231,7 +1231,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,spawned,lookclose,location,equipment,type,inventory,mounttrait
+    traitnames: equipment,spawned,type,inventory,location,lookclose,gravity,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1256,7 +1256,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: spawned,lookclose,location,age,type,mounttrait
+    traitnames: spawned,type,age,location,lookclose,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
