--- a/plugins/Citizens/saves.yml
+++ b/plugins/Citizens/saves.yml
@@ -44,7 +44,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,spawned,waypoints,lookclose,owner,anchors,equipment,speech,location,mounttrait,text
+    traitnames: gravity,anchors,spawned,mounttrait,type,speech,text,waypoints,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -89,7 +89,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,speech,spawned,lookclose,location,mounttrait,owner,anchors,text
+    traitnames: gravity,text,spawned,anchors,mounttrait,type,lookclose,inventory,equipment,location,speech,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -121,7 +121,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -153,7 +153,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -185,7 +185,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -217,7 +217,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -313,7 +313,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -345,7 +345,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -377,7 +377,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -409,7 +409,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -441,7 +441,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -609,7 +609,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,sentinel,waypoints,lookclose,location,mounttrait,owner
+    traitnames: gravity,waypoints,spawned,mounttrait,type,lookclose,inventory,equipment,location,sentinel,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -741,7 +741,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,sentinel,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner,sentinel
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -873,7 +873,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,sentinel,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,sentinel,owner
     navigator:
       pathfindingrange: '100.0'
       speedmodifier: '1.0'
@@ -906,7 +906,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -938,7 +938,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -967,7 +967,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -996,7 +996,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1025,7 +1025,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1054,7 +1054,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1083,7 +1083,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1112,7 +1112,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1141,7 +1141,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1173,7 +1173,7 @@ npc:
       owner:
         owner: server
         uuid: ''
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait,owner
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1202,7 +1202,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1231,7 +1231,7 @@ npc:
         enabled: true
         realisticlooking: false
       spawned: true
-    traitnames: gravity,inventory,type,equipment,spawned,lookclose,location,mounttrait
+    traitnames: gravity,spawned,mounttrait,type,lookclose,inventory,equipment,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -1256,7 +1256,7 @@ npc:
       age:
         age: 0
         locked: true
-    traitnames: type,spawned,age,lookclose,location,mounttrait
+    traitnames: age,spawned,mounttrait,type,lookclose,location
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
